  * numeric selection of dvd menu buttons (could make some dvd easter eggs accesible)
  * big api cleanup
  * xine engine can open more than one stream at a time
  * audio compressor filter
  * content detection fixes (e.g. mpeg program streams)
  * much improved plugin loader, makes it possible to have several
    versions of libxine installed in parallel
	
xine-lib (0.9.13) unstable; urgency=low

  * improved audio resampling for cards limited to 16 bits, stereo or mono
  * native wmv7 decoder using ffmpeg
  * enable ffmpeg's native msmpeg4 v1/v2 decoder
  * correct highlight placement for anamorphic and pan&scan menus with DXR3
  * half-way support for widescreen tv sets with DXR3
  * WAV file demuxer
  * SMJPEG file demuxer
  * Id CIN file demuxer
  * FLI file demuxer
  * FLI video decoder
  * Raw RGB video support
  * Raw YUV video support
  * Microsoft RLE decoder
  * AAC decoder (FAAD2 library)
  * Reworked ALSA audio support 
  * demux_qt improvements to handle .mp4
  * initial support of Quicktime6 files
  * image redraw in paused mode (for window resize, adjusts etc)
  * skip by chapters GUI enhancement
  * deliver frame statistics only if frames have been skipped/dropped

 -- Siggi Langauf <siggi@debian.org>  Sat,  3 Aug 2002 22:44:16 +0200

xine-lib (0.9.12) unstable; urgency=low

  * demux_ts fixes for ATSC streams
  * configurable size of avi subtitles
  * fixed bug in libsputext that caused subtitle flashing
  * update win32 codec loading code
  * use directshow filter to decode msmpeg4 v1/v2
  * fixed logo file name extension
  * fixed german i18n files

 -- Guenter Bartsch <guenter@users.sourceforge.net>

xine-lib (0.9.11) unstable; urgency=low
  
  * sync with ffmpeg cvs
  * some endianess and 64bit machine fixes
  * better quality using linearblend filter
  * new FILM (CPK) demuxer
  * new RoQ demuxer
  * RoQ video decoder
  * RoQ audio decoder
  * new SVQ1 decoder
  * new QuickTime demuxer
  * DXR3 overlay mode fixed