@@ -7,8 +7,6 @@ required for 1.0pre
 - input_vcd
 - input_stdin, input_net (guenter)
 - demux_asf: content detection for files (guenter)
-- file plugin: handle URIS (translate %-encoded characters, # as separator)
-  (guenter)
 
 
 required for 1.0
@@ -25,8 +23,9 @@ required for 1.0
 - fix rate estimation in demux_mpeg/demux_mpeg_block
 - fix streaming if small files (e.g. http)
 - implement timeout in input_http, implement it correctly using select()
-- fix potential overflow in compressor audio filter
-- xine health check
+  (guenter)
+- fix potential overflow in compressor audio filter (guenter)
+- xine health check (stephen)
 - sputext decoder plugin
 - spucc decoder plugin
 - xvid decoder plugin
@@ -34,7 +33,7 @@ required for 1.0
 - opengl video output plugin
 - esd audio output plugin
 - arts audio output plugin
-- irix audio output plugin
+- irix audio output plugin (matthias)
 - input_dvd: detect errors, display useful error messages
 - define a grammar for MRLs (michael)
 - prepare architecture for post effect plugins (michael)
@@ -59,6 +58,7 @@ opional
 - directfb video output plugin
 - reduce memory footprint (e.g. variable fifo buffer sizes...)
 - bring dxr3 video out to work with aaxine (michael)
+- streaming of avi files (e.g. via http)
 
 
 Assigned tasks
