@@ -32,6 +32,8 @@ xine-lib (next version) [someone fill in stability and urgency]
   * content detection fixes (e.g. mpeg program streams)
   * much improved plugin loader, makes it possible to have several
     versions of libxine installed in parallel
+  * file:// mrl use an uri-like syntax now, %xx-encoded chars are handled,
+    '#' is used to separate subtitle files
 	
 xine-lib (0.9.13) unstable; urgency=low
 
